// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Interpreter - Structs should interpret structs 1`] = `
{
  "members": {
    "x": {
      "primitiveType": "number",
      "type": "type",
      "typeKind": "primitive",
    },
    "y": {
      "primitiveType": "number",
      "type": "type",
      "typeKind": "primitive",
    },
  },
  "optional": {
    "x": false,
    "y": false,
  },
  "type": "type",
  "typeKind": "struct",
  "typeName": undefined,
}
`;

exports[`Interpreter - Structs should interpret structs with optional fields 1`] = `
{
  "members": {
    "x": {
      "primitiveType": "number",
      "type": "type",
      "typeKind": "primitive",
    },
    "y": {
      "primitiveType": "number",
      "type": "type",
      "typeKind": "primitive",
    },
  },
  "optional": {
    "x": false,
    "y": true,
  },
  "type": "type",
  "typeKind": "struct",
  "typeName": undefined,
}
`;
